# Decepticon

./: .gitignore  Makefile  README.md  README_KO.md  docker-compose.yml  langgraph.json  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmark/: README-mhbench.md  harness.py  reporter.py  runner.py  schemas.py
benchmark/providers/: mhbench.py
benchmark/results/: README.md
benchmark/results/XBEN-056-24/: report.md
benchmark/results/XBEN-066-24/: report.json  report.md
benchmark/results/XBEN-097-24/: report.md
clients/launcher/cmd/: chatgpt_auth_sync.go  chatgpt_auth_sync_test.go  onboard.go  start.go  stop.go
clients/web/: package.json
clients/web/server/: terminal-server.ts
config/: litellm.yaml  litellm_dynamic_config.py  litellm_startup.py  oauth_token_store.py
containers/: langgraph.Dockerfile  litellm.Dockerfile  web.Dockerfile
decepticon/: graph_registry.py  orchestrator.py  plugin_loader.py
decepticon/agents/: __init__.py  ad_operator.py  analyst.py  cloud_hunter.py  contract_auditor.py  decepticon.py  detector.py  exploit.py  exploiter.py  patcher.py  postexploit.py  recon.py  reverser.py  scanner.py  soundwave.py  verifier.py  vulnresearch.py
decepticon/agents/plugins/: detector.py  exploiter.py  patcher.py  scanner.py  verifier.py  vulnresearch.py
decepticon/agents/prompts/: __init__.py  analyst.md  decepticon.md  defender.md  exploit.md  exploiter.md  postexploit.md  recon.md  scanner.md  soundwave.md  vulnresearch.md
decepticon/agents/standard/: ad_operator.py  analyst.py  cloud_hunter.py  contract_auditor.py  decepticon.py  exploit.py  postexploit.py  recon.py  reverser.py  soundwave.py
decepticon/backends/: docker_sandbox.py
decepticon/core/: engagement_loop.py  env_verifier.py  schemas.py
decepticon/llm/: factory.py  models.py
decepticon/middleware/: __init__.py  engagement.py  filesystem.py  intelligence.py  notifications.py  opplan.py  skills.py
decepticon/schemas/: env_verification.py  exploit_spec.py
decepticon/tools/: opplan.py  skills.py
decepticon/tools/bash/: bash.py  prompt.py
decepticon/tools/interaction/: ask_user.py
decepticon/tools/research/: exploit_spec_writer.py  tools.py
docs/: architecture.md  benchmark-comparison.md  cli-reference.md  contributing.md  contributor-architecture.md  library-consumer-guide.md  models.md  setup-guide.md  skills.md
scripts/: install.sh
skills/benchmark/: SKILL.md
skills/decepticon/: workflow.md
skills/decepticon/final-report/: SKILL.md
skills/decepticon/orchestration/: SKILL.md
skills/exploit/: workflow.md
skills/exploit/web/: SKILL.md  deserialization.md  smuggling.md
skills/post-exploit/: workflow.md
skills/recon/: workflow.md
skills/recon/web-recon/: SKILL.md
skills/shared/: workflow.md
skills/shared/finding-protocol/: SKILL.md
skills/soundwave/: workflow.md
skills/standard/soundwave/: workflow.md
tests/unit/: test_plugin_loader.py
(+37 files in other folders)
